# square-cards

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: coverage.yml
square_cards/: __init__.py  assets.py  importer.py  repository.py  server.py  views.py
tests/: test_repository.py  test_web_ui.py
tests/fixtures/: callerschool-pattern.txt
